Refactors code for Hubble constant estimation
Improves accuracy of distance correction calculation
Updates Hubble constant calculation to use the speed of light constant
Increases iteration count for distance correction calculation

Relates to #123

--- a/Hubble_Constant_Estimation.ipynb
+++ b/Hubble_Constant_Estimation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "a0d07e16",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "50a858b8",
    "metadata": {},
    "outputs": [],
@@ -40,13 +40,13 @@
     "def corrected_distances(k, m, M):\n",
     "    \"\"\"Calculate corrected distances iteratively.\"\"\"\n",
     "    D = 10 ** ((m - M + 5) / 5) / 1e6\n",
-    "    for _ in range(10):\n",
+    "    for _ in range(50):\n",
     "        A_V = k * D\n",
     "        m_corr = m - A_V\n",
     "        D = 10 ** ((m_corr - M + 5) / 5) / 1e6\n",
     "    return D\n",
     "\n",
-    "def hubble_fit(k, m, M, z, c=3.0e5):\n",
+    "def hubble_fit(k, m, M, z, c=299792.458):\n",
     "    \"\"\"Objective function for Hubble fit.\"\"\"\n",
     "    D_corr = corrected_distances(k, m, M)\n",
     "    v_obs = c * z\n",
@@ -54,7 +54,7 @@
     "    v_pred = H0 * D_corr\n",
     "    return np.sum(((v_obs) - (v_pred))**2)\n",
     "\n",
-    "def compute_H0(k, m, M, z, c=3.0e5):\n",
+    "def compute_H0(k, m, M, z, c=299792.458):\n",
     "    \"\"\"Compute Hubble constant H0.\"\"\"\n",
     "    D_corr = corrected_distances(k, m, M)\n",
     "    v_obs = c * z\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "45b62ef9",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "2bd6a48e",
    "metadata": {},
    "outputs": [],
@@ -121,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "c645c0e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "D_initial = 10 ** ((apparent_magnitude - absolute_magnitude + 5) / 5) / 1e6\n",
-    "for _ in range(10):\n",
+    "for _ in range(5000):\n",
     "    A_V = k_best * D_initial\n",
     "    m_corr = apparent_magnitude - A_V\n",
     "    D_initial = 10 ** ((m_corr - absolute_magnitude + 5) / 5) / 1e6\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "135a5f59",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "7ed603a4",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "65a99d09",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
      "text": [
       "H0 = 78.3474 ± 6.56 km/s-Mpc\n",
       "k = 0.0033 mag/Mpc\n",
-      "Time = 12481781038.4510 ± 1045651884.2895 Years\n"
+      "Time = 12481776602.9416 ± 1045651358.4611 Years\n"
      ]
     }
    ],
